# space-hackathon-2026

./: .gitignore  README.md
Problem_1/: CMakeLists.txt  problem_info.md
Problem_1/problem_data/literature/: Понтрягин_Принцип максимума в оптимальном управлении_2004.djvu
Problem_1/run/: CMakeLists.txt  run_opt_orb.cpp
Problem_1/src/: CMakeLists.txt
Problem_1/src/Space_hackathon/: CMakeLists.txt  optimal_3d_transition.hpp  spacecraft.hpp  third_party_test.hpp
Problem_1/src/Space_hackathon/math/: integration.hpp  interpolation.hpp
Problem_1/tests/: CMakeLists.txt  test_optimal_3d_transition.cpp  test_third_party.cpp
Problem_1/tests/math/: test_dp_45.cpp  test_spline.cpp
Problem_2/: problem_info.md
Problem_2/solution/: CMakeLists.txt
Problem_2/solution/src/: CMakeLists.txt  atmosphere.hpp
Problem_2/solution/tests/: CMakeLists.txt
Problem_3/: problem_info.md
Problem_3/With_CNN/Subtask2/: Subtask2_CNN.ipynb
Problem_3/With_CNN/Subtask3/: Subtask3.ipynb
Problem_3/Without_CNN/Subtask1/: Subtask1.ipynb
Problem_3/Without_CNN/Subtask2/: Subtask2.ipynb
Problem_3/Without_CNN/Subtask3/: Subtask3.ipynb
Problem_extra/: Problem_info.md
